# apuntes

./: .gitignore  CurrentlyWorking.md  EU Flood Directive and Flood Risk Mapping.md  FRM Case Study Bangladesh.md  Fieldtrip.md  Flash Floods.md  Flood Damage Assessment.md  Flood Forecasting and Warning.md  Flood Risk Management (M14).md  Flood Risk Mapping.md  Fluvial floods.md  Golang.md  Guía & Intereses.md  How to learn.md  Introduction to Flood Risk Management.md  Introduction to hydrological modelling with HEC-HMS.md  Inundation mapping.md  Learning.md  Maintainer Guide Pysheds.md  Master Prompt.md  Network Concepts.md  PINN - Thesis Topic.md  Projects.md  README.md  Scientific Writing.md  Summary of papers and relevant stuff.md  Teams.md  To Learn (from notion).md  UV - Python.md  Untitled.md  Urban Flood Risk Management.md  Wanda Projects.md  neorg.norg  nvim.md  python_water_resources.md  python_water_resources_BASE_235134.md  python_water_resources_REMOTE_235134.md  react.md  threejs-journey.md  tmux.md
Examenes/: Ex_HecrasController ForEx3.ipynb  Ex_HecrasController ForEx3Modified.ipynb  Examen2.ipynb  Examen2Base.ipynb  Examen2_Resuelto.html  Examen3.ipynb  pyproject.toml
Examenes/Data Examen 3/Ex_4/Model/test01/: test01.O01  test01.g01.hdf  test01.r01  test01.rasmap
Examenes/Data Examen 3/Ex_4/Model/test02/: s7.O01  s7.f01  s7.g01.hdf  s7.p01  s7.p01.computeMsgs.txt  s7.p01.hdf  s7.r01  (+1 more)
Examenes/Data/Rst/: glacierImage.tif.aux.xml
Examenes/Data/Shp/: lakeLine.dbf  lakeLine.shp  lakeLine.shx
files/: newfile.ipynb  pp.csv  pyproject.toml  sympy.py
(+448 files in other folders)
