[project]
name = "apuntes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scipy>=1.15.0",
    "sympy>=1.13.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]
